[gd_scene load_steps=65 format=2]

[ext_resource path="res://img/ranger_idle.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://img/magicAttack.png" type="Texture" id=3]
[ext_resource path="res://img/warrior_idle.png" type="Texture" id=4]
[ext_resource path="res://img/meleeAttack.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/playerUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://img/ranger_attack.png" type="Texture" id=7]
[ext_resource path="res://scenes/control/musicPlayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/control/Special_attack.tres" type="Animation" id=9]
[ext_resource path="res://img/warrior_walk.png" type="Texture" id=10]
[ext_resource path="res://img/warrior_attack.png" type="Texture" id=11]
[ext_resource path="res://img/ranger_walk.png" type="Texture" id=12]
[ext_resource path="res://img/wizard_walk.png" type="Texture" id=13]
[ext_resource path="res://img/wizard_idle.png" type="Texture" id=14]
[ext_resource path="res://img/wizard_attack.png" type="Texture" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 19.1017

[sub_resource type="CircleShape2D" id=2]
radius = 34.2345

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 70.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1010, 603 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("playerUI:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("weapons/sword:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("weapons/sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapons/sword/nearAttack/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:canAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "warrior_walk"

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "wizard_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "wizard_idle",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "wizard_attack",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "ranger_idle",
"speed": 7.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "ranger_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "ranger_attack",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "warrior_attack",
"speed": 15.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "warrior_idle",
"speed": 7.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "warrior_walk",
"speed": 5.0
} ]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="pjHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pjHitbox"]
shape = SubResource( 2 )

[node name="playerUI" parent="." instance=ExtResource( 6 )]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = -28.0

[node name="weapons" type="Node2D" parent="."]
position = Vector2( -0.529724, 0.707108 )

[node name="sword" type="Node2D" parent="weapons"]
visible = false

[node name="Sprite" type="Sprite" parent="weapons/sword"]
position = Vector2( 44.7251, -44.5477 )
rotation = 0.785398
scale = Vector2( 0.15, 0.1 )
texture = ExtResource( 5 )

[node name="nearAttack" type="Area2D" parent="weapons/sword"]
position = Vector2( 45.832, -45.5001 )
rotation = 0.785398

[node name="CollisionShape2D2" type="CollisionShape2D" parent="weapons/sword/nearAttack"]
shape = SubResource( 3 )
disabled = true

[node name="special_attack" type="Node2D" parent="."]

[node name="SA" type="Sprite" parent="special_attack"]
visible = false
position = Vector2( 0, 1300 )
scale = Vector2( 10.073, 6.06886 )
texture = ExtResource( 3 )

[node name="SA_Area" type="Area2D" parent="special_attack"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="special_attack/SA_Area"]
position = Vector2( 0, 1300 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Special_attack = ExtResource( 9 )
anims/lowHealth = SubResource( 5 )
anims/meleeAttack = SubResource( 6 )
anims/warrior_walk = SubResource( 7 )

[node name="magicReloadTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="meleeReloadTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="meleeAnimTimer" type="Timer" parent="."]
one_shot = true

[node name="rangedAnimTimer" type="Timer" parent="."]
one_shot = true

[node name="magicAnimTimer" type="Timer" parent="."]
one_shot = true

[node name="rangedReloadTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="inputDisabled" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="magicAttack" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 21 )
animation = "wizard_attack"
frame = 4
playing = true

[node name="rangedAttack" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 35 )
animation = "ranger_idle"
frame = 1
playing = true

[node name="meleeAttack" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 49 )
animation = "warrior_idle"
frame = 2
playing = true

[node name="staminaRecharge" type="Timer" parent="."]
one_shot = true

[node name="musicPlayer" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 0.943878 )

[connection signal="area_entered" from="pjHitbox" to="." method="_on_pjHitbox_area_entered"]
[connection signal="timeout" from="inputDisabled" to="." method="_on_inputDisabled_timeout"]
[connection signal="timeout" from="staminaRecharge" to="." method="_on_staminaRecharge_timeout"]
